--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
         "start": "next start"
     },
     "dependencies": {
+        "classnames": "^2.2.6",
         "next": "9.3.4",
         "react": "16.13.1",
         "react-dom": "16.13.1"
     },
     "devDependencies": {
+        "@types/classnames": "^2.2.10",
         "@types/node": "^13.11.0",
         "@types/react": "^16.9.32",
         "typescript": "^3.8.3"
