--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
         "classnames": "^2.2.6",
         "next": "9.3.4",
         "react": "16.13.1",
-        "react-dom": "16.13.1"
+        "react-dom": "16.13.1",
+        "react-modal": "^3.11.2"
     },
     "devDependencies": {
         "@types/classnames": "^2.2.10",
         "@types/node": "^13.11.0",
         "@types/react": "^16.9.32",
+        "@types/react-modal": "^3.10.5",
         "typescript": "^3.8.3"
     }
 }
