--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "next": "9.3.4",
         "react": "16.13.1",
         "react-dom": "16.13.1",
+        "react-hook-form": "^5.3.1",
         "react-modal": "^3.11.2"
     },
     "devDependencies": {
