--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "classnames": "^2.2.6",
         "next": "9.3.4",
         "react": "16.13.1",
-        "react-dom": "16.13.1"
+        "react-dom": "16.13.1",
+        "react-scroll-parallax": "^2.3.2"
     },
     "devDependencies": {
         "@types/classnames": "^2.2.10",
