--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "start": "next start"
     },
     "dependencies": {
+        "@types/d3-shape": "^1.3.2",
         "classnames": "^2.2.6",
+        "d3-shape": "^1.3.7",
         "next": "9.3.4",
         "react": "16.13.1",
         "react-dom": "16.13.1",
