--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "next": "9.3.4",
         "react": "16.13.1",
         "react-dom": "16.13.1",
+        "react-hook-form": "^5.6.0",
         "react-modal": "^3.11.2",
         "react-scroll-parallax": "^2.3.2",
         "react-use": "^14.1.1"
